# invulhulp

./: .dockerignore  .env.azure.example  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  admin_users.py  auth.py  azure-pipelines.yml  debug_share.py  docker-compose.yml  docstore.py  dossiers.py  dossierstore.py  eval_prompts.py  imagestore.py  index.html  main.py  nginx.conf  package-lock.json  package.json  pyproject.toml  rag.py  users.py  vite.config.ts
.github/workflows/: build-and-push.yml
backend/: auth.py  collab.py  dossiers.py  dossierstore.py  eval_prompts.py  llm.py  main.py  rag.py  users.py
docs/: cross-form-connecties.md  realtime-collab-plan.md  spike-phase0-collab.md
public/forms/: aanbiedingsformulier.json  aiia.json  crossFormMappings.json  dpia.json  index.json  intake.json  ppm.json  prescandpia.json  psa.json  quickscan.json
public/sample-documents/: 01-brainstorm-belastingadviseur-ai.md  02-agenda-kickoff-belastingadviseur-ai.md  03-notulen-architectuuroverleg.md  04-stakeholderanalyse-belastingadviseur-ai.docx  05-risicoregister-belastingadviseur-ai.xlsx  06-projectpresentatie-belastingadviseur-ai.pptx
src/: App.vue  main.ts  vite-env.d.ts
src/assets/: main.css
src/collab/: dossierDoc.test.ts  dossierDoc.ts  dossierTransport.ts  editorBinding.test.ts  useCollab.ts  usePresence.ts  ydocCodec.test.ts  ydocCodec.ts
src/components/: AiModeToggle.vue  AppFooter.vue  AppHeader.vue  AssessmentForm.vue  ConfirmDialog.vue  CrossFormSuggestion.vue  DecisionGate.vue  DocumentOntology.vue  DocumentSuggestion.vue  (+20 more)
(+19 files in other folders)
