[project]
name = "findocs"
version = "0.1.0"
description = "findocs – AI-assisted Government Compliance Forms"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "ollama>=0.4.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "lancedb>=0.13.0",
    "pyarrow>=17.0.0",
    "authlib>=1.3.0",
    "httpx>=0.27.0",
    "itsdangerous>=2.2.0",
    "python-multipart>=0.0.9",
]
